assets/sass/rennes-hugo/design-system/_hero.sass
.hero
  .breadcrumb
    @include media-breakpoint-up(desktop)
      height: $spacing-6

    &-nav
      @include media-breakpoint-down(desktop)
        padding-top: $spacing-2

  .content
    margin-top: pxToRem(20)
    @include media-breakpoint-up(desktop)
      margin-top: pxToRem(32)

    .hero-text
      display: flex
      flex-wrap: wrap
      align-items: flex-start
      margin-top: 0

      h1,
      hgroup
        width: 100%

      .chip
        order: -1
        margin-bottom: $spacing-3

        @include media-breakpoint-up(desktop)
          margin-bottom: $spacing-4

  &--image-portrait, &--image-square
    .content
      figure
        @include media-breakpoint-up(desktop)
          width: columns(4)

